tests/baselines/reference/methodInAmbientClass1.errors.txt
tests/cases/compiler/methodInAmbientClass1.ts(2,12): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
tests/cases/compiler/methodInAmbientClass1.ts(2,20): error TS1177: An implementation cannot be declared in ambient contexts.


==== tests/cases/compiler/methodInAmbientClass1.ts (2 errors) ====
        declare class Foo {
        	fn(): boolean {
        	      ~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
        	              ~
!!! error TS1177: An implementation cannot be declared in ambient contexts.
        	}
        }